Make the library JPMS-enabled. Rewrite README.md